--- a/flutter_entrega_2/pubspec.yaml
+++ b/flutter_entrega_2/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  image_picker:
+  mime_type:
 
 
   # The following adds the Cupertino Icons font to your application.
